--- a/.env
+++ b/.env
@@ -1,6 +1,22 @@
+# ===============================
+# CONFIGURACIÓN GENERAL DEL SERVIDOR
+# ===============================
+APP_NAME="API Hadas y Duendes"
 APP_ENV=local
 APP_DEBUG=true
+APP_URL=http://apihadasyduendes.test
 
+# ===============================
+# JWT CONFIG
+# ===============================
+JWT_SECRET="kjsdf9834hfjskdfh2398fsd8f7hASDASDjf83274" 
+JWT_ISSUER="http://apihadasyduendes.test"
+JWT_AUDIENCE="http://localhost:3000"
+JWT_EXPIRE_HOURS=2
+
+# ===============================
+# DB CONFIG
+# ===============================
 DB_HOST=25.39.4.19
 DB_USER=hadasyduendes
 DB_PASS=hadasyduendesjf
